Enlarge products.quantity column to prevent wrapping #6306

--- a/client/app/admin/products/products/products.component.scss
+++ b/client/app/admin/products/products/products.component.scss
@@ -1,5 +1,13 @@
 :host {
   .mat-column-quantity {
-    min-width: 5em;
+    min-width: 6em;
+  }
+  .quantity-body {
+    display: flex;
+    flex-direction: row;
+  }
+  .quantity-body, .quantity-amount {
+    flex: 1;
+    text-align: right;
   }
 }
